--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "start:prod": "NODE_ENV=production concurrently \"npm run server\" \"npm run client\"",
+    "debug": "ndb server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
+    "ndb": "^1.1.5",
     "nodemon": "^2.0.2"
   }
 }
