--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "google-auth-library": "^5.10.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
