--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:coverage": "npm run test -- --coverage --watchAll=false; open coverage/lcov-report/index.html"
   },
   "eslintConfig": {
     "extends": "react-app"
